--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                 <i class="ion-ios-download-outline"></i>Hold
             </button>
 
-            <img src="dice-5.png" alt="Dice" class="dice" />
+            <img src="assets/images/dice-5.png" alt="Dice" class="dice" />
         </div>
 
         <script src="game.js"></script>
