game is now displaying results in real time on firebase

--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
             type="text/css"
         />
         <link rel="stylesheet" href="assets/css/style.css" />
+
+        <script src="https://www.gstatic.com/firebasejs/5.9.0/firebase.js"></script>
     </head>
     <body>
         <div class="wrapper clearfix">
@@ -50,6 +52,11 @@
             <img src="assets/images/dice-5.png" alt="Dice" class="dice" />
         </div>
 
+        <script
+            src="http://code.jquery.com/jquery-3.3.1.slim.min.js"
+            integrity="sha256-3edrmyuQ0w65f8gfBsqowzjJe2iM6n0nKciPUp8y+7E="
+            crossorigin="anonymous"
+        ></script>
         <script src="game.js"></script>
     </body>
 </html>
