added https request and removed jquery

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
             type="text/css"
         />
         <link
-            href="http://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css"
+            href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css"
             rel="stylesheet"
             type="text/css"
         />
@@ -52,11 +52,6 @@
             <img src="assets/images/dice-5.png" alt="Dice" class="dice" />
         </div>
 
-        <script
-            src="http://code.jquery.com/jquery-3.3.1.slim.min.js"
-            integrity="sha256-3edrmyuQ0w65f8gfBsqowzjJe2iM6n0nKciPUp8y+7E="
-            crossorigin="anonymous"
-        ></script>
         <script src="game.js"></script>
     </body>
 </html>
